@@ -19,4 +19,6 @@
 #define FLAG_Z  (1 << FLAG_Z_BIT)
 #define FLAG_C  (1 << FLAG_C_BIT)
 
+extern const char s_SREG[];
+
 #endif /* SREG_H */
